--- a/Source/Resource.WindowsDX.resx
+++ b/Source/Resource.WindowsDX.resx
@@ -119,9 +119,9 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="qc_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Content\Compiled\qc_background.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>Content\Compiled.WindowsDX\qc_background.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="qc_console" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Content\Compiled\qc_console.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>Content\Compiled.WindowsDX\qc_console.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
